--- a/index.html
+++ b/index.html
@@ -328,10 +328,15 @@
                   PLAY
                   <icon class="play"></icon>
                 </button>
-                <button v-if="game.solved && game.guesses > 0" class="inline report">
+                <button v-if="game.solved && game.guesses > 0 && !game.quit" class="inline report">
                   <icon class="check"></icon>
                   In {{game.guesses}}
                 </button>
+                <button v-if="game.solved && game.guesses > 0 && game.quit" class="inline report">
+                  <icon class="nope alertbackground"></icon>
+                  In {{game.guesses}}
+                </button>
+
                 <button v-if="!game.solved && game.guesses > 0" class="inline report" :class="{alert: !game.solved && game.guesses > 0}">
                   <icon class="nope"></icon>
                   {{game.guesses}} {{game.guesses === 1 ? "Try" : "Tries"}}
