--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
           </message>
           <h3>Past 10 days</h3>
           <gamelinks>
-            <gamelink v-for="(game, index) in getDailyGamesWithWordSetNames" @click="HandleOldGameClick(event, game)">
-              <p :class="{done: game.solved}">
+            <gamelink :class="{done: game.solved}" v-for="(game, index) in getDailyGamesWithWordSetNames" @click="HandleOldGameClick(event, game)">
+              <p>
                 <a>
                   <small>
                     <dot v-if="index === 0 && ! HasUserStartedGame(game)">•</dot>
