--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <meta name="keywords" content="Facets, Facets!, Big Tent Games, Games, Casual game, Puzzle game, Word game, Boardgame, Wil Voss" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="images/icon192.png" />
