--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             Category backgrounds
             <toggle></toggle>
           </checkbox>
-          <small>Enable this to display category related background.</small>
+          <small>Enable this to display category related backgrounds.</small>
           <checkbox v-if="appStateUsePortraitLayout" :class="{on: tempUserSettingsShowAllCards}" @click="ToggleTempShowAllCards()">
             Show all unused cards
             <toggle></toggle>
