--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </h2>
           <message>What's your game name?</message>
           <input autocomplete="off" style="text-align: center" spellcheck="false" maxlength="14" id="nameInput" placeholder="_ _ _ _ _ _" v-model="tempName" />
-          <checkbox :class="{on: tempUserWantsDailyReminder && getUserAcceptedNotificationsPermission, disabled: !getUserAcceptedNotificationsPermission}" @click="ToggleTempUserWantsDailyReminder()">
+          <checkbox v-if="getSyncIsSupported" :class="{on: tempUserWantsDailyReminder && getUserAcceptedNotificationsPermission, disabled: !getUserAcceptedNotificationsPermission}" @click="ToggleTempUserWantsDailyReminder()">
             Allow notifications
             <toggle></toggle>
           </checkbox>
@@ -277,12 +277,12 @@
             <toggle></toggle>
           </checkbox>
           <small :class="{disabled: tempUserSettingsUsesSimplifiedTheme}">Enable this if you want the gem to remain green when you are creating, guessing, or reviewing.</small>
-          <checkbox :class="{on: tempUserWantsDailyReminder, disabled: !getUserAcceptedNotificationsPermission}" @click="ToggleTempUserWantsDailyReminder()">
+          <checkbox v-if="getSyncIsSupported" :class="{on: tempUserWantsDailyReminder, disabled: !getUserAcceptedNotificationsPermission}" @click="ToggleTempUserWantsDailyReminder()">
             Notifications
             <toggle></toggle>
           </checkbox>
-          <small v-if="getUserAcceptedNotificationsPermission"> Enable this to get Daily Reminder notifications (once a day at 8:00 am). </small>
-          <instructions v-if="!getUserAcceptedNotificationsPermission && !isPWAOnHomeScreen">
+          <small v-if="getSyncIsSupported && getUserAcceptedNotificationsPermission"> Enable this to get Daily Reminder notifications (once a day at 8:00 am). </small>
+          <instructions v-if="getSyncIsSupported && !getUserAcceptedNotificationsPermission && !isPWAOnHomeScreen">
             Notifications are currently disabled in your browser settings. To enable notifications for Facets, please follow these steps:
             <ul>
               <li>Open your browser's settings.</li>
@@ -291,7 +291,7 @@
             </ul>
             Once you have updated your browser settings, refresh close and reopen Facets, after which you can enable notifications here.
           </instructions>
-          <instructions v-if="isPWAOnHomeScreen">
+          <instructions v-if="getSyncIsSupported && isPWAOnHomeScreen">
             If you aren't getting notifications for Facets, they may be disabled on your device:
             <ul>
               <li>Open your device settings.</li>
