--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             The Daily
             <badge v-if="vsShowDaily && getDailyIsFreshToday">{{appDataNumberOfNewDailies}}</badge>
           </button>
-          <!-- <button class="inline small" @click="ToggleShowGlobalCreated(event)">Player Puzzles</button> -->
+          <button class="inline small" @click="ToggleShowGlobalCreated(event)">Player Puzzles</button>
           <button class="inline small" @click="ToggleShowTutorial(event)">How To Play</button>
           <button class="inline small" @click="ShowSettings(event)">Settings</button>
           <button class="inline small" @click="ToggleShowInfo(event)">Credits</button>
