--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                   In {{game.guesses}}
                 </button>
                 <button v-if="game.solved && game.guesses > 0 && game.quit" class="inline report">
-                  <icon class="nope alertbackground"></icon>
+                  <icon class="quit alertbackground"></icon>
                   In {{game.guesses}}
                 </button>
                 <button v-if="!game.solved && game.guesses > 0" class="inline report" :class="{alert: !game.solved && game.guesses > 0}">
@@ -419,7 +419,7 @@
           <flogo></flogo>
           <icon v-if="getCurrentDaily && !getCurrentDaily.solved" :class="getCorrectCalIconClass" class="large" @click="ToggleShowDailyGames(event)"></icon>
           <icon v-if="getCurrentDaily && getCurrentDaily.solved && !getCurrentDaily.quit" class="check large" @click="ToggleShowDailyGames(event)"></icon>
-          <icon v-if="getCurrentDaily && getCurrentDaily.solved && getCurrentDaily.quit" style="background: hsl(var(--alertHSL))" class="nope large" @click="ToggleShowDailyGames(event)"></icon>
+          <icon v-if="getCurrentDaily && getCurrentDaily.solved && getCurrentDaily.quit" style="background: hsl(var(--alertHSL))" class="quit large" @click="ToggleShowDailyGames(event)"></icon>
           <icon v-if="!getCurrentDaily" class="logo" @click="appStateShowNotification = true"></icon>
           <span>
             <count v-if="getCurrentDaily && getCurrentDaily.solved"> in {{getCurrentDaily.guesses}} {{getCurrentDaily.guesses !== 1 ? 'tries' : 'try'}} </count>
