--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
       <wrapper>
         <controls>
           <button class="inline small" @click="ToggleShowMeta(event)">
-            {{appStateUsePortraitLayout ? 'Menu': 'Home'}}
+            Menu
             <badge v-if="vsShowDaily && getDailyIsFreshToday">{{appDataNumberOfNewDailies}}</badge>
           </button>
         </controls>
